sfdx-source/SmartVisca/main/default/objects/DefaultRenkeiMapping__mdt/DefaultRenkeiMapping__mdt.object-meta.xml
<CustomObject>
    <label>デフォルト名刺連携項目マッピング</label>
</CustomObject>