sfdx-source/SmartVisca/main/default/objects/DefaultRenkeiMapping__mdt/fields/NameCardName__c.field-meta.xml
<CustomField>
    <fullName>NameCardName__c</fullName>
    <label>名刺の項目(API名称)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>