sfdx-source/SmartVisca/main/default/objects/DefaultRenkeiMapping__mdt/fields/recordtype__c.field-meta.xml
<CustomField>
    <fullName>recordtype__c</fullName>
    <label>レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>