sfdx-source/SmartVisca/main/default/objects/DefaultRenkeiMapping__mdt/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <label>対象の項目(API名称)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>