sfdx-source/SmartVisca/main/default/objects/DefaultRenkeiMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>recordtype__c</columns>
    <columns>TargetName__c</columns>
    <columns>NameCardName__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>全て</label>
    <language>ja</language>
</ListView>